--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">HelloAgain</string>
     <string name="action_settings">Settings</string>
+    <string name="button_1_text">"Tuff knapp"</string>
+
 </resources>
